# ws2812-nrf

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
bh1750/: Cargo.toml
bh1750/src/: main.rs
bit_64/: Cargo.toml
bit_64/src/: main.rs
ble_gatt_server/: Cargo.toml
ble_gatt_server/src/: gatt_server.rs  led_mode.rs  main.rs
embassy-nrf-ws2812-pwm/: Cargo.toml  README.md
embassy-nrf-ws2812-pwm/src/: lib.rs  ws2812.rs
examples/bit_64/: memory.x
examples/ble_gatt_client/: Cargo.toml
examples/ble_gatt_server/src/: gatt_server.rs  led_mode.rs  lib.rs  main.rs
examples/rainbow_strip/: Cargo.toml
rainbow_strip/: Cargo.toml
rainbow_strip/src/: main.rs
strip/: Cargo.toml
strip/src/: lib.rs  main.rs  ws2812_pwm.rs  ws2812_timer.rs
