[workspace]
members = [
  "strip",
]
resolver = "2"

[profile.dev]
opt-level = 0
# lto = true
codegen-units = 1
debug = true
# debug = 2
overflow-checks = true
# panic = "abort" 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
overflow-checks = false
panic = "abort" 

[workspace.dependencies]
[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "1bc7380cd5d7a031f37511b69da13fc6caded816"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "1bc7380cd5d7a031f37511b69da13fc6caded816"}
#bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "83a9e179ff019ed60abb73705f54383f89fc60fc" }

