[workspace]
members = [
  "embassy-nrf-ws2812-pwm",
  "strip",
]
resolver = "2"

[profile.dev]
opt-level = 0
# lto = true
codegen-units = 1
debug = true
# debug = 2
overflow-checks = true
# panic = "abort" 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
overflow-checks = false
panic = "abort" 

[workspace.dependencies]
[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4"}
#bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "83a9e179ff019ed60abb73705f54383f89fc60fc" }

