[workspace]
members = [
  "embassy-nrf-ws2812-pwm",
  "strip",
]
resolver = "2"

[profile.dev]
opt-level = 0
# lto = true
codegen-units = 1
debug = true
# debug = 2
overflow-checks = true
# panic = "abort" 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = 2
overflow-checks = false
panic = "abort" 

[workspace.dependencies]
smart-leds = "0.4"
embassy-nrf-ws2812-pwm = { path = "embassy-nrf-ws2812-pwm/" }

embassy-executor = { version = "0.9", default-features = false, features = ["arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-time = { version = "0.5", default-features = false, features = ["defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.8", default-features = false, features = ["defmt", "time-driver-rtc1", "gpiote", "unstable-pac", "rt", "nrf52840"] }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }

futures = { version = "0.3", default-features = false, features = ["async-await"]}
nrf-sdc = { version = "0.4", default-features = false, features = ["defmt", "peripheral", "central", "nrf52840"] }
nrf-mpsl = { version = "0.3", default-features = false, features = ["defmt", "critical-section-impl"] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

cortex-m = { version = "0.7.6" }
cortex-m-rt = "0.7.0"
rand = { version = "0.8.5", default-features = false }
static_cell = "2"
rand_core = { version = "0.6"}
rand_chacha = { version = "0.3", default-features = false }

[patch.crates-io]
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4"}
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "11d5c3c3653af73b511133c2f8231f33eb0696f4"}
#bt-hci = { git = "https://github.com/embassy-rs/bt-hci.git", rev = "83a9e179ff019ed60abb73705f54383f89fc60fc" }
