[package]
edition      = "2024"
name         = "bh1750"
version      = "0.1.0"
publish      = false
description  = "Example of running a single LED based on the BH1750 light sensor"

[dependencies]
smart-leds.workspace = true
bh1750.workspace = true
embassy-nrf-ws2812-pwm.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true
nrf-sdc.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt.workspace = true
static_cell.workspace = true

[[bin]]
name = "bh1750"
path = "src/main.rs"
test = false
doctest = false
bench = false
