[package]
edition      = "2024"
name         = "bit-64"
version      = "0.1.0"
publish      = false
description  = "Example of running an 8 LED strip with rainboard color hues"

[dependencies]
smart-leds.workspace = true
embassy-nrf-ws2812-pwm.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true
nrf-sdc.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m-rt.workspace = true
static_cell.workspace = true

[[bin]]
name = "bit-64"
path = "src/main.rs"
test = false
doctest = false
bench = false
