[package]
edition      = "2024"
name         = "embassy-nrf-ws2812-pwm"
version      = "0.1.0"
description  = "Driver for ws2812 LEDs using embassy-nrf PWM and smart-leds"

[features]
defmt = ["embassy-time/defmt", "embassy-time/defmt-timestamp-uptime", "embassy-nrf/defmt"]
nrf52840 = ["embassy-nrf/nrf52840"]

[dependencies]
embassy-time = { version = "0.5", default-features = false }
embassy-nrf = { version = "0.8", default-features = false }
smart-leds = "0.4"
