[package]
edition      = "2024"
name         = "embassy-nrf-ws2812-pwm"
version      = "0.1.0"
description  = "Driver for WS2812 LEDs using embassy-nrf PWM and smart-leds"
license      = "MIT OR Apache-2.0"

[features]
defmt = ["embassy-time/defmt", "embassy-time/defmt-timestamp-uptime", "embassy-nrf/defmt"]
nrf51 = ["embassy-nrf/nrf51"]
nrf52805 = ["embassy-nrf/nrf52805"]
nrf52810 = ["embassy-nrf/nrf52810"]
nrf52811 = ["embassy-nrf/nrf52811"]
nrf52820 = ["embassy-nrf/nrf52820"]
nrf52832 = ["embassy-nrf/nrf52832"]
nrf52833 = ["embassy-nrf/nrf52833"]
nrf52840 = ["embassy-nrf/nrf52840"]
nrf5340-app-s = ["embassy-nrf/nrf5340-app-s"]
nrf5340-app-ns = ["embassy-nrf/nrf5340-app-ns"]
nrf5340-net = ["embassy-nrf/nrf5340-net"]
nrf54l15-app-s = ["embassy-nrf/nrf54l15-app-s"]
nrf54l15-app-ns = ["embassy-nrf/nrf54l15-app-ns"]
nrf9160-s = ["embassy-nrf/nrf9160-s"]
nrf9160-ns = ["embassy-nrf/nrf9160-ns"]
nrf9120-s = ["embassy-nrf/nrf9120-s"]
nrf9120-ns = ["embassy-nrf/nrf9120-ns"]

[dependencies]
embassy-time = { version = "0.5", default-features = false }
embassy-nrf = { version = "0.8", default-features = false }
smart-leds-trait = "0.3"
rgb = "0.8"
