[package]
edition      = "2024"
name         = "ble-gatt-client"
version      = "0.1.0"
publish      = false
description  = "Example of controlling an 8 LED strip via BLE"

[dependencies]
smart-leds.workspace = true
embassy-nrf-ws2812-pwm.workspace = true
embassy-executor.workspace = true
embassy-time.workspace = true
embassy-nrf.workspace = true
nrf-sdc.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
panic-probe.workspace = true
cortex-m-rt.workspace = true
static_cell.workspace = true

embassy-futures.workspace = true
embassy-sync.workspace = true
futures.workspace = true
nrf-mpsl.workspace = true
bt-hci.workspace = true
cortex-m.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true

[[bin]]
name = "ble-gatt-client"
path = "src/main.rs"
test = false
doctest = false
bench = false
